# snapmed-pharmacv

./: .dockerignore  .gitignore  Build_Plan.md  Dockerfile  Makefile  README.md  codex-session-log.jsonl  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py  storage.py
backend/api/: cases.py  queries.py
backend/models/: cases.py  queries.py
backend/services/: bootstrap.py  merge.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: index.css  main.tsx
frontend/src/api/: case-review-api.ts  http-client.ts  types.ts
frontend/src/app/: App.tsx  providers.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  select.tsx  textarea.tsx
frontend/src/config/: env.ts
frontend/src/data/: case-fixtures.ts
frontend/src/domain/: case-classification.ts
frontend/src/features/case-review/: CaseReviewPage.tsx  domain.ts
frontend/src/features/case-review/components/: CaseHeader.tsx  ConfidenceBadge.tsx  FieldReviewCard.tsx  MissingFieldsBanner.tsx  RaiseQueryDialog.tsx  ReviewSection.tsx  ReviewToolbar.tsx  StateViews.tsx  StatusBadge.tsx
frontend/src/features/case-review/hooks/: use-case-review.ts  use-review-controls.ts
ops/: backup.sh  restore.sh  run.sh
tests/: conftest.py  test_api.py  test_health.py  test_merge.py  test_ops.py  test_storage.py
