[project]
name = "snapmed-pharmacv"
version = "0.1.0"
description = "FastAPI backend for pharmacovigilance case review follow-up merging."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.124.0",
    "pydantic>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
